connexion requeres function for every defined path
