# src/karmen_backend/server/__init__.py
@@ -125,3 +125,5 @@ import server.tasks
 import server
 
 connexion_app.add_api("swagger.yaml")
+
+server.routes.tests_admin.add_user_to_org()
