# src/karmen_backend/server/routes/tests_admin.py
@@ -1,0 +1,6 @@
+def create_test_user():
+    pass
+
+
+def add_user_to_org():
+    pass
